# api.limon.sh

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: aws.yml
service/: manage.py  pyproject.toml  setup.cfg
service/api/: urls.py
service/api/v1/: urls.py
service/api/v1/auth/: serializers.py  urls.py  views.py
service/api/v1/cluster/: serializers.py  views.py
service/api/v1/docs/: urls.py  views.py
service/api/v1/machine/: serializers.py  views.py
service/api/v1/organization/: serializers.py  urls.py  views.py
service/api/v1/product/: serializers.py  views.py
service/api/v1/project/: serializers.py  views.py
service/api/v1/team/: serializers.py  views.py
service/apps/: __init__.py
service/apps/auth/: authentication.py  dataclasses.py  services.py
service/apps/auth/google/: services.py
service/apps/auth/providers/: __init__.py  basic.py  github.py  google.py
service/apps/auth/token/: services.py
service/apps/cluster/: admin.py  models.py
service/apps/machine/: admin.py  models.py
service/apps/organization/: admin.py  models.py
service/apps/product/: admin.py  models.py
service/apps/project/: admin.py  models.py
service/apps/user/: admin.py  models.py  serializers.py
service/libs/: mixins.py  models.py  storages.py  validators.py
service/settings/: __init__.py  base.py  develop.py
service/tests/: conftest.py
service/tests/factories/: organization.py  product.py  project.py  user.py
service/tests/test_api/: test_urls.py
service/tests/test_libs/: test_models.py
(+50 files in other folders)
